<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.example.hyojin.myrecorder.loading.LoadingView
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/btnRecording"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/btn_recording"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnStreaming"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/btn_streaming"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnWatching"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/btn_watching"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/btn_setting"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="520.14px"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>
