<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.example.hyojin.myrecorder.loading.LoadingView
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:id="@+id/name"
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.7"
                android:background="@color/white"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btn_only"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:id="@+id/btnOnly"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="-20dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:id="@+id/email"
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.7"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btn_auth"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:id="@+id/sendauth"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="-20dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:id="@+id/authtext"
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.7"
                android:background="@color/white"
                android:hint="@string/hint_auth"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btn_chk"
                android:textColor="@color/white"
                android:id="@+id/authchk"
                android:background="@color/colorAccent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="-20dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.7"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="520.14px"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
